vlib/v/checker/tests/invert_other_types_bits_error.out
vlib/v/checker/tests/invert_other_types_bits_error.v:2:13: error: operator ~ only defined on int types
    1 | fn main() {
    2 |     println(~3.0)
      |             ^
    3 |     println(~10.5)
    4 |     println(~'2')
vlib/v/checker/tests/invert_other_types_bits_error.v:3:13: error: operator ~ only defined on int types
    1 | fn main() {
    2 |     println(~3.0)
    3 |     println(~10.5)
      |             ^
    4 |     println(~'2')
    5 |     println(~[2, 4, 6])
vlib/v/checker/tests/invert_other_types_bits_error.v:4:13: error: operator ~ only defined on int types
    2 |     println(~3.0)
    3 |     println(~10.5)
    4 |     println(~'2')
      |             ^
    5 |     println(~[2, 4, 6])
    6 | }
vlib/v/checker/tests/invert_other_types_bits_error.v:5:13: error: operator ~ only defined on int types
    3 |     println(~10.5)
    4 |     println(~'2')
    5 |     println(~[2, 4, 6])
      |             ^
    6 | }
